5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1828_1648.log
== TEST (2019-06-12 14:32:28) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(quantidade, dtype = int)
c = 0:
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
File "XXXX", line 9
    c = 0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:32:39) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(quantidade, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:33:13) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:34:02) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- EXECUTION TIME:
1.22809
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[1 1 1]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[1 1 1]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:34:10) 
-- CODE:
from numpy import*

v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:48) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:23) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:46:37) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- EXECUTION TIME:
0.790559
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[1 1 1]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[1 1 1]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:39) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:07) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 1;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:29) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:49:27) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- EXECUTION TIME:
1.11987
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[1 1 1]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[1 1 1]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:34) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:13) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:44) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:53:10) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = 1
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:53:54) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = i
		c+=1
print(qtd)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:54:12) 
-- CODE:
from numpy import *
v = array(eval(input("")))
qtd = 0
for i in range(len(v)):
	if v[i]< 70:
		qtd+=1
v2 = zeros(qtd, dtype = int)
c = 0;
for i in range(len(v)):
	if v[i]<70:
		v2[c] = i
		c+=1
print(qtd)
print(v2)
-- EXECUTION TIME:
1.06534
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[1 2 5]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[1 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
